Add new module shardingsphere-proxy-native-distribution and update doc